[package]
name = "blaster"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
blastview = { path = "../blastview" }
tokio = { version = "1.47.1", features = [] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
