[package]
name = "blaster"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
blastview = { path = "../blastview" }
web = { path = "../web" }
dashmap = "6.1.0"
futures = "0.3.31"
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = [] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4"] }
flume = "0.11.1"
tokio-util = "0.7.16"
